[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Free/Main Characters/Alien/run7.png" type="Texture" id=2]
[ext_resource path="res://Assets/Free/Main Characters/Alien/run4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Free/Main Characters/Alien/run2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Free/Main Characters/Alien/idle3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Free/Main Characters/Alien/idle4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Free/Main Characters/Alien/jump1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Free/Main Characters/Alien/idle1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Free/Main Characters/Alien/idle2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Free/Main Characters/Alien/run1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Free/Main Characters/Alien/run3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Free/Main Characters/Alien/run5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Free/Main Characters/Alien/run6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Free/Main Characters/Alien/fall.png" type="Texture" id=14]
[ext_resource path="res://Assets/Free/Main Characters/Alien/jump2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Free/Main Characters/Alien/hit02.png" type="Texture" id=16]
[ext_resource path="res://Assets/Free/Main Characters/Alien/hit01.png" type="Texture" id=17]
[ext_resource path="res://Assets/Free/Other/Shadow.png" type="Texture" id=18]
[ext_resource path="res://Assets/Free/Other/Dust Particle.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sounds/jump1.ogg" type="AudioStream" id=20]
[ext_resource path="res://Assets/Free/Main Characters/Alien/shot2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Free/Main Characters/Alien/shot3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Free/Main Characters/Alien/shot4.png" type="Texture" id=25]
[ext_resource path="res://Assets/Free/Main Characters/Alien/shot6.png" type="Texture" id=26]
[ext_resource path="res://Assets/Free/Main Characters/Alien/shot5.png" type="Texture" id=28]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.45614, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.022, 0.293046 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.677152 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.7
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 1, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 0.8
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "hit",
"speed": 3.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 3.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 26 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "fall",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 15 ) ],
"loop": false,
"name": "jump",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.82171, 9.8271 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6.95053, 8.68029 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 7.35143, 2.13313 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 32, 132 )
scale = Vector2( 1.36028, 1.40639 )
collision_mask = 94
script = ExtResource( 1 )

[node name="bullet_point" type="Position2D" parent="."]
position = Vector2( 19.1137, 36.9741 )

[node name="steps_fx" type="Particles2D" parent="."]
position = Vector2( 0.735144, 12.0877 )
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
process_material = SubResource( 8 )
texture = ExtResource( 19 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( -0.735142, 14.9319 )
scale = Vector2( 1.0973, 0.199979 )
texture = ExtResource( 18 )

[node name="texture" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"
frame = 1
speed_scale = 3.0

[node name="collision_player" type="CollisionShape2D" parent="."]
position = Vector2( 1.90735e-06, 2.7167 )
shape = SubResource( 2 )

[node name="raycasts" type="Node2D" parent="."]

[node name="raycast" type="RayCast2D" parent="raycasts"]
position = Vector2( -2.94057, 7.1104 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 88

[node name="raycast2" type="RayCast2D" parent="raycasts"]
position = Vector2( 3.67571, 7.1104 )
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 88

[node name="camera" type="Camera2D" parent="."]
scale = Vector2( 1.10544, 1.10297 )
current = true
limit_left = 0
limit_top = -450
limit_bottom = 200
smoothing_enabled = true
drag_margin_left = 0.5
drag_margin_top = 0.5
drag_margin_right = 0.5
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="hurtbox" type="Area2D" parent="."]
visible = false
scale = Vector2( 1.48075, 1.07998 )
collision_layer = 32
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
modulate = Color( 0.627451, 0.458824, 1, 1 )
position = Vector2( 0, -2.75484 )
shape = SubResource( 10 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( 0, 2.84416 )
scale = Vector2( 0.8, 0.8 )
enabled = true
cast_to = Vector2( -16, 0 )
collision_mask = 2

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 0, 2.84416 )
scale = Vector2( 0.8, 0.8 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="headCollider" type="Area2D" parent="."]
visible = false
collision_mask = 16

[node name="collision" type="CollisionShape2D" parent="headCollider"]
position = Vector2( 0, -10.6656 )
shape = SubResource( 9 )

[node name="jumpFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
volume_db = -20.0

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="headCollider" to="." method="_on_headCollider_body_entered"]
